crates/solidity/testing/snapshots/bindings_output/enums/sample/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:17:5 ]
    │
 17 │ ╭─▶     function getChoice() public view returns (ActionChoices) {
    ┆ ┆   
 31 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  4 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  5 │     enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │          ──────┬──────   ───┬──  ───┬───  ─────┬────  ────┬───  
    │                ╰──────────────────────────────────────────────── name: 2
    │                             │       │          │          │     
    │                             ╰─────────────────────────────────── name: 3
    │                                     │          │          │     
    │                                     ╰─────────────────────────── name: 4
    │                                                │          │     
    │                                                ╰──────────────── name: 5
    │                                                           │     
    │                                                           ╰───── name: 6
    │ 
  7 │     ActionChoices choice;
    │                   ───┬──  
    │                      ╰──── name: 7
  8 │     ActionChoices constant defaultChoice = ActionChoices.GoStraight;
    │                            ──────┬──────  
    │                                  ╰──────── name: 8
    │ 
 10 │     function setGoStraight() public {
    │              ──────┬──────  
    │                    ╰──────── name: 9
    │
    ├─[ input.sol:1:1 ]
    │
  7 │     ActionChoices choice;
    │     ──────┬──────  
    │           ╰──────── ref: 2
  8 │     ActionChoices constant defaultChoice = ActionChoices.GoStraight;
    │     ──────┬──────                          ──────┬────── ─────┬────  
    │           ╰────────────────────────────────────────────────────────── ref: 2
    │                                                  │            │      
    │                                                  ╰─────────────────── ref: 2
    │                                                               │      
    │                                                               ╰────── ref: 5
    │ 
 11 │         choice = ActionChoices.GoStraight;
    │         ───┬──   ──────┬────── ─────┬────  
    │            ╰─────────────────────────────── ref: 7
    │                        │            │      
    │                        ╰─────────────────── ref: 2
    │                                     │      
    │                                     ╰────── ref: 5
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  3 │ ╭─▶ 
    ┆ ┆   
 32 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  5 │   │       enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │   │   ────────────────────────────┬───┬───┬──────────┬──────────┬──────  
    │   │                               ╰────────────────────────────────────── definiens: 3
    │   │                                   │   │          │          │        
    │   │                                   ╰────────────────────────────────── definiens: 2
    │   │                                       │          │          │        
    │   │                                       ╰────────────────────────────── definiens: 4
    │   │                                                  │          │        
    │   │                                                  ╰─────────────────── definiens: 5
    │   │                                                             │        
    │   │                                                             ╰──────── definiens: 6
  6 │   ╭─▶ 
  7 │   ├─▶     ActionChoices choice;
    │   │                               
    │   ╰─────────────────────────────── definiens: 7
  8 │ │         ActionChoices constant defaultChoice = ActionChoices.GoStraight;
    │ │     ──────────────────────────────────┬──────────────────────────────────  
    │ │                                       ╰──────────────────────────────────── definiens: 8
  9 │ ╭───▶ 
    ┆ ┆     
 12 │ ├───▶     }
    │ │             
    │ ╰───────────── definiens: 9
────╯
